# eth_crawler

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: display.rs  mod.rs
src/lib/: balance.rs  display.rs  mod.rs  transactions.rs
src/modules/: arguments.rs  display.rs  mod.rs  transactions.rs
src/provider/: balance.rs  mod.rs  transactions.rs
src/server/: display.rs  handlers.rs  index.html  mod.rs
