[package]
name = "eth_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
clap = {version = "4.0.0", features = ["derive"]}
ethers = { version = "2.0.0", features = ["rustls"] }
tokio = "1.24.2"
